--- a/dein.toml
+++ b/dein.toml
@@ -13,3 +13,11 @@ repo = 'tpope/vim-fugitive'
 [[plugins]]
 repo = 'lambdalisue/fern.vim'
 
+[[plugins]]
+repo = 'junegunn/fzf'
+build = './install --all'
+merged = '0'
+
+[[plugins]]
+repo = 'junegunn/fzf.vim'
+depends = 'fzf'
