--- a/dein.toml
+++ b/dein.toml
@@ -5,6 +5,9 @@ repo = 'Shougo/dein.vim'
 repo = 'tomasr/molokai'
 
 [[plugins]]
+repo = 'chriskempson/vim-tomorrow-theme'
+
+[[plugins]]
 repo = 'tpope/vim-commentary'
 
 [[plugins]]
